ContentfulPaintChecker should not trigger plugin snapshotting https://bugs.webkit.org/show_bug.cgi?id=218777 <rdar://problem/71256352>

Reviewed by Simon Fraser.

Widgets should not be notified when detecting contentful paint.

No new tests, a minor optimization.

* page/FrameView.cpp:
(WebCore::FrameView::willPaintContents):


Canonical link: https://commits.webkit.org/231466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269687 268f45cc-cd09-0410-ab3c-d52691b4dbfc